--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <!-- JOURNAL TITLE -->
-            <TextView
+            <Button
                 android:id="@+id/tvJournal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -93,9 +93,13 @@
                 android:textStyle="bold"
                 android:textColor="#0F0F0F"
                 android:fontFamily="serif"
+                android:background="@android:color/transparent"
+                android:elevation="0dp"
+                android:padding="0dp"
                 app:layout_constraintTop_toBottomOf="@id/tvQuote"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+
 
             <!-- OVAL NOTE TEXT (STATIC TEXT, UNIQUE ID) -->
             <androidx.cardview.widget.CardView
