--- a/app/src/main/res/layout/activity_mood_mt.xml
+++ b/app/src/main/res/layout/activity_mood_mt.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bg_screen_gradient"
+    android:background="@drawable/bg_screen_gradient_mt"
     android:padding="16dp">
 
     <!-- Top line -->
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/bg_calendar_card"
+        android:background="@drawable/bg_calendar_card_mt"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -95,7 +95,7 @@
             tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             tools:spanCount="7"
             tools:itemCount="42"
-            tools:listitem="@layout/item_calendar_day" />
+            tools:listitem="@layout/item_calendar_day_mt" />
     </LinearLayout>
 
     <!-- Purple panel (like your image) -->
@@ -103,7 +103,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:background="@drawable/bg_panel_purple"
+        android:background="@drawable/bg_panel_purple_mt"
         android:padding="16dp"
         android:orientation="vertical">
 
@@ -276,7 +276,7 @@
             android:id="@+id/etReflection"
             android:layout_width="match_parent"
             android:layout_height="110dp"
-            android:background="@drawable/bg_reflection_box"
+            android:background="@drawable/bg_reflection_box_mt"
             android:hint=""
             android:padding="10dp"
             android:gravity="top"
@@ -329,8 +329,8 @@
         android:layout_marginTop="6dp"
         android:max="100"
         android:progress="50"
-        android:progressDrawable="@drawable/stress_seekbar_progress"
-        android:thumb="@drawable/stress_thumb"
+        android:progressDrawable="@drawable/stress_seekbar_progress_mt"
+        android:thumb="@drawable/stress_thumb_mt"
         android:splitTrack="false"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"/>
@@ -341,7 +341,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/bg_play_button"
+        android:background="@drawable/bg_play_button_mt"
         android:backgroundTint="@null"
         android:text="PLAY"
         android:textStyle="bold"
