--- a/app/src/main/res/layout/activity_mood_mt.xml
+++ b/app/src/main/res/layout/activity_mood_mt.xml
@@ -21,11 +21,11 @@
         android:gravity="end"
         android:paddingTop="8dp">
 
-        <TextView
+        <ImageView
             android:id="@+id/tvMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="≡"
+            android:src="@drawable/ic_menu"
             android:textSize="26sp"
             android:textColor="#2A2A2A"/>
     </LinearLayout>
