--- a/app/src/main/res/drawable/gradient_background_cd.xml
+++ b/app/src/main/res/drawable/gradient_background_cd.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="135"
-        android:startColor="@color/gradient_start"
-        android:endColor="@color/gradient_end"
+        android:startColor="#C0C0C0"
+        android:endColor="#C0C0C0"
         android:type="linear" />
 </shape>
