--- a/app/src/main/res/drawable/gradient_background_ie.xml
+++ b/app/src/main/res/drawable/gradient_background_ie.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/gradient_blue_start"
-        android:endColor="@color/gradient_blue_end"
+        android:startColor="#C0C0C0"
+        android:endColor="#C0C0C0"
         android:angle="135" />
 </shape>
