--- a/app/src/main/res/drawable/settings_item_background_ie.xml
+++ b/app/src/main/res/drawable/settings_item_background_ie.xml
@@ -8,7 +8,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/settings_item_bg" />
+            <solid android:color="#E0E0E0" />
             <corners android:radius="8dp" />
         </shape>
     </item>
