--- a/app/src/main/res/layout/activity_mood_mt.xml
+++ b/app/src/main/res/layout/activity_mood_mt.xml
@@ -22,7 +22,7 @@
         android:paddingTop="8dp">
 
         <ImageView
-            android:id="@+id/tvMenu"
+            android:id="@+id/menuIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_menu"
@@ -334,16 +334,4 @@
         android:splitTrack="false"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"/>
-
-    <!-- Play button -->
-    <Button
-        android:id="@+id/btnPlay"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/bg_play_button_mt"
-        android:backgroundTint="@null"
-        android:text="PLAY"
-        android:textStyle="bold"
-        android:textColor="#1B1B1B"/>
 </LinearLayout>
