--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <!-- Game board background -->
+    <color name="game_board_bg">#FFF7F7F7</color>
+
+    <!-- Pastel palette (GameBoardViewActivity / GameBoardView) -->
+    <color name="pastel_lavender">#FFD9D2FF</color>
+    <color name="pastel_sky_blue">#FFCFEAFF</color>
+    <color name="pastel_mint">#FFCFF5E6</color>
+    <color name="pastel_pink">#FFFFD1E8</color>
+    <color name="pastel_peach">#FFFFDCC8</color>
+    <color name="pastel_yellow">#FFFFF3C9</color>
+
+    <!-- InhaleExhale indicators -->
+    <color name="indicator_pink">#FFFF8FB1</color>
+    <color name="indicator_blue">#FF6EC6FF</color>
+    <color name="indicator_green">#FF7EE081</color>
+
+    <color name="black" > #000000</color>
+    <color name="white" > #FFFFFF</color>
+
+
 </resources>
