--- a/app/src/main/res/drawable/notebook_lines_diary.xml
+++ b/app/src/main/res/drawable/notebook_lines_diary.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#00000000"/>
 
-</selector>
+    <!-- draw repeated horizontal lines -->
+    <size android:width="1dp" android:height="1dp"/>
+
+    <stroke
+        android:width="1dp"
+        android:color="#FFFFFF"/>
+
+    <!-- This "stroke" alone won’t repeat, so we fake it with a layer-list below -->
+</shape>
