--- a/app/src/main/res/layout/dialog_save_diary.xml
+++ b/app/src/main/res/layout/dialog_save_diary.xml
@@ -29,7 +29,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/rounded_button_diary"
+            android:background="@drawable/bg_save_pill"
             android:text="Yes"
             android:textAllCaps="false"
             android:textColor="#FFFFFF" />
@@ -38,7 +38,7 @@
             android:id="@+id/btn_dialog_no"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/rounded_button_diary"
+            android:background="@drawable/bg_save_pill"
             android:text="No"
             android:textAllCaps="false"
             android:textColor="#FFFFFF" />
