--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="18dp">
+            android:padding="18dp"
+            android:background="@drawable/bg_blue_gradient_diary">
 
             <!-- APP TITLE -->
             <TextView
