--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,6 +82,6 @@
         <item name="android:background">@drawable/bg_history_rect</item>
     </style>
 
-
+    <style name="Base.Theme.StarSweepActivity" parent="Theme.Material3.DayNight.NoActionBar" />
 
 </resources>
