--- a/app/src/main/res/layout/activity_connectdots.xml
+++ b/app/src/main/res/layout/activity_connectdots.xml
@@ -26,7 +26,7 @@
         android:id="@+id/menuIcon"
         android:layout_width="26dp"
         android:layout_height="26dp"
-        android:src="@drawable/ic_menu"
+        android:src="@drawable/ic_settings_ie"
         android:tint="#1E1E1E"
         android:contentDescription="Menu"
         app:layout_constraintTop_toTopOf="parent"
