--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -24,7 +24,6 @@
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:src="@drawable/ic_menu"
-        android:tint="#1E1E1E"
         android:contentDescription="Menu"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="6dp"
@@ -99,9 +98,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="22dp"
+        android:overScrollMode="never"
+        android:clipToPadding="false"
+        android:paddingStart="6dp"
+        android:paddingEnd="6dp"
         app:layout_constraintTop_toBottomOf="@id/tabRow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
